# cubicle

./: .eslintignore  .eslintrc.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  eslint.config.js
.cargo/: config.toml
cubicle/: Cargo.toml  build.rs
cubicle/res/: background.html  background.js  main.js  manifest.json  options.html  options.js  popup.html  popup.js
cubicle/res/components/: container-detail.html  container-detail.js  context-map.js  context.js  delete-prompt.html  delete-prompt.js  icon-grid.html  import.html  import.js  new-container.html  new-container.js  options-body.html  options-body.js  welcome.html  welcome.js
cubicle/res/styles/: styles.css
cubicle/src/: container.rs  context.rs  lib.rs  preferences.rs  tab.rs  view.rs
cubicle/src/domain/: mod.rs  psl.rs  suffix.rs
cubicle/src/interop/: contextual_identities.rs  fetch.rs  mod.rs  storage.rs  tabs.rs
cubicle/src/interop/bits/: identity_details.rs  mod.rs  reader_value_done_pair.rs
cubicle/src/message/: container.rs  mod.rs  view.rs
cubicle/src/migrate/: import.rs  mod.rs
cubicle/src/option/: mod.rs
cubicle/src/util/: errors.rs  message.rs  mod.rs  options.rs
cubicle/src/view/: mod.rs
