[package]
name = "cubicle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
console_error_panic_hook = "0.1.7"
idna = "0.3.0"
js-sys = "0.3.61"
serde = { version = "1.0.158", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.1"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window",
  "console",
  "ReadableStream",
  "ReadableStreamByobReader",
  "ReadableStreamDefaultReader",
  "ReadableStreamGetReaderOptions",
  "ReadableStreamReaderMode",
]
