[package]
name = "cubicle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
console_error_panic_hook = "0.1.7"
derivative = "2.2.0"
idna = "0.3.0"
js-sys = "0.3.61"
mockall_double = "0.3.0"
once_cell = "1.17.1"
serde = { version = "1.0.158", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.1"
tera = { version = "1.18.1", default-features = false }
thiserror = "1.0.40"
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window",
  "ReadableStream",
  "ReadableStreamByobReader",
  "ReadableStreamDefaultReader",
  "ReadableStreamGetReaderOptions",
  "ReadableStreamReaderMode",
  "Url",
]

[build-dependencies]
fs_extra = "1.3.0"
tera = { version = "1.18.1", default-features = false }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
indoc = "2.0.3"
mockall = "0.11.4"
